--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,9 +4,10 @@
 }
 
 
-#bonnyTreeContainer {
+#cms_tpv_container {
 	clear: both;
 	overflow: visible;
+	margin-top: 1.5em;
 }
 
 .pages_page_cms-tpv-pages-page .updated {
@@ -15,6 +16,12 @@
 
 .cms-tpv-subsubsub li {
 	display: inline;
+}
+
+.cms-tpv-subsubsub li a.current {
+	font-weight: bold;
+	text-decoration: none;
+	color: black;
 }
 
 .pages_page_cms-tpv-pages-page .cms-tpv-subsubsub li {
@@ -148,6 +155,7 @@ cms_tpv_action_add_page_inside:hover
 #cms_tpv_dashboard_widget #cms_tree_view_search_form {
 	display: block;
 	margin-left: 0;
+	margin-top: .5em;
 }
 
 #cms_tpv_dashboard_widget .cms-tpv-subsubsub {
@@ -169,3 +177,8 @@ cms_tpv_action_add_page_inside:hover
 	display: none;
 }
 
+#cms_tpv_working {
+	position: absolute;
+	line-height: 1;
+	display: none;
+}
