--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,16 +32,10 @@
 	clear: both;
 }
 
-.tree li {
-	margin-top: 2px !important;
-	margin-bottom: 2px !important;
-}
-
-
-.tree li span.cms_tpv_action_edit,
-.tree li span.cms_tpv_action_view,
-.tree li span.cms_tpv_action_add_page_after,
-.tree li span.cms_tpv_action_add_page_inside
+span.cms_tpv_action_edit,
+li span.cms_tpv_action_view,
+li span.cms_tpv_action_add_page_after,
+li span.cms_tpv_action_add_page_inside
 {
 	display: none;
 	text-decoration: underline;
@@ -52,14 +46,13 @@
 	padding: 0 0 0 .5ex;
 
 }
-.tree li span.cms_tpv_action_add_page {
+li span.cms_tpv_action_add_page {
 	display: none;
 	border: 0;
 	padding: 0 0 0 .5em;
 	color: #666;
 }
 
-.tree li a.search,
 .cms-tree-view-search
 {
 	background-color: #ffefba;
@@ -85,7 +78,7 @@
 	color: #d54e21 !important;
 }
 
-.tree ins {
+.jstree a ins {
 	cursor: move;
 }
 
@@ -102,16 +95,14 @@
 	color: #999;
 	border: none;
 	font-size: .8em;
-}
-
-.tree li:nth-child(odd) {
+	margin-left: .5em;
 }
 
 .tree-default span.post_type {
 	background-color: #f85b11;
-	-moz-border-radius: 2px;
-	-webkit-border-radius: 2px;
-	border-radius: 2px;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	border-radius: 3px;
 	padding: 1px 4px 1px 4px;
 	color: white;
 	border: none;
@@ -140,8 +131,7 @@
 	opacity: .9;
 }
 
-#cms_tpv_open_all
-{
+#cms_tpv_open_all {
 	margin-left: 1em;
 }
 
@@ -182,3 +172,21 @@
 	line-height: 1;
 	display: none;
 }
+
+#cms_tree_view_search_form_reset {
+	display: none;
+	position: absolute;
+	top: 2px;
+	left: 112px;
+	width: 16px;
+	height: 16px;
+	background: transparent url(http://jquery-ui.googlecode.com/svn/trunk/themes/base/images/ui-icons_888888_256x240.png) no-repeat -32px -194px;
+	text-indent: -9999px;
+}
+#cms_tpv_dashboard_widget #cms_tree_view_search_form_reset {
+	top: 8px;
+}
+#cms_tree_view_search_form_reset:hover {
+	background: transparent url(http://jquery-ui.googlecode.com/svn/trunk/themes/base/images/ui-icons_454545_256x240.png) no-repeat -32px -194px;
+}
+
