--- a/styles/styles.css
+++ b/styles/styles.css
@@ -98,6 +98,15 @@ li span.cms_tpv_action_add_page {
 	margin-left: .5em;
 }
 
+.tree-default span.post_protected {
+	display:inline-block;
+	margin:0 3px 0 0; padding:0;
+	width:16px; height:16px;
+	/* icon source => http://www.famfamfam.com/lab/icons/silk/  */
+	background:transparent url(images/lock.png) center no-repeat;
+}
+
+
 .tree-default span.post_type {
 	background-color: #f85b11;
 	-moz-border-radius: 3px;
@@ -190,3 +199,19 @@ li span.cms_tpv_action_add_page {
 	background: transparent url(http://jquery-ui.googlecode.com/svn/trunk/themes/base/images/ui-icons_454545_256x240.png) no-repeat -32px -194px;
 }
 
+#cms_tpv_annoying_little_box {
+	padding: 1em;
+	background-color: #FFFFE0;
+	border: 1px solid #E6DB55;
+	margin: 1em 0 1em 0;
+}
+#cms_tpv_annoying_little_box p {
+	margin: 0 0 .5em 0;
+}
+p#cms_tpv_annoying_little_box_close {
+	float: right;
+	margin-left: 2em;
+	font-size: .8em;
+	margin-top: -1em;
+	margin-right: -.5em;
+}
