--- a/styles/styles.css
+++ b/styles/styles.css
@@ -198,9 +198,12 @@ li span.cms_tpv_action_add_page {
 
 .cms_tpv_annoying_little_box {
 	padding: 1em;
-	background-color: #FFFFE0;
+	background-color: #FFFBCC;
 	border: 1px solid #E6DB55;
 	margin: 1em 0 1em 0;
+	-moz-border-radius: 6px;
+	-webkit-border-radius: 6px;
+	border-radius: 6px;
 }
 .cms_tpv_annoying_little_box p {
 	margin: 0 0 .5em 0;
@@ -276,4 +279,18 @@ p.cms_tpv_annoying_little_box_close {
 	display: block;
 	top: 7px;
 	left: -8px;
+}
+
+.cms_tpv_page_actions_columns table td {
+	font-size: 11px;
+}
+
+.cms_tpv_page_actions_columns .vers {
+	display: inline;
+	padding-right: 2px;
+	vertical-align: middle;
+}
+.cms_tpv_page_actions_columns .post-com-count-wrapper {
+}
+.cms_tpv_wrapper .cms_tpv_page_actions_columns a.post-com-count {
 }
