--- a/styles/styles.css
+++ b/styles/styles.css
@@ -294,3 +294,8 @@ p.cms_tpv_annoying_little_box_close {
 }
 .cms_tpv_wrapper .cms_tpv_page_actions_columns a.post-com-count {
 }
+
+li.cms_tpv_user_can_edit_page_no a {
+	opacity: .6; /* Standard: FF gt 1.5, Opera, Safari */
+	-ms-filter: "alpha(opacity=60)"; /* IE 8 */
+}
