--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,6 +5,8 @@
 }
 */
 
+@import url("http://s0.wordpress.com/i/noticons/noticons.css");
+
 
 .cms_tpv_wrapper {
 	z-index: 10;
@@ -51,29 +53,6 @@
 .cms_tpv_search_no_hits {
 	clear: both;
 }
-
-/*
-span.cms_tpv_action_edit,
-li span.cms_tpv_action_view,
-li span.cms_tpv_action_add_page_after,
-li span.cms_tpv_action_add_page_inside
-{
-	display: none;
-	text-decoration: underline;
-	border: 0;
-	-moz-border-radius: 0;
-	-webkit-border-radius: 0;
-	border-radius: 0;
-	padding: 0 0 0 .5ex;
-
-}
-li span.cms_tpv_action_add_page {
-	display: none;
-	border: 0;
-	padding: 0 0 0 .5em;
-	color: #666;
-}
-*/
 
 .cms-tree-view-search
 {
@@ -248,23 +227,43 @@ li span.cms_tpv_action_add_page {
 	}
 
 .cms_tpv_page_actions {
-	transition: all .25s ease-in-out; -webkit-transition: all .25s ease-in-out; -moz-transition: all .25s ease-in-out; -o-transition: all .25s ease-in-out; -ms-transition: all .25s ease-in-out;
+	/*transition: all .25s ease-in-out; -webkit-transition: all .25s ease-in-out; -moz-transition: all .25s ease-in-out; -o-transition: all .25s ease-in-out; -ms-transition: all .25s ease-in-out;*/
 	width: auto;
-	min-width: 125px;
+	min-width: 175px;
+	width: 175px;
 	height: auto;
 	background-color: white;
 	position: absolute;
 	top: 0;
 	white-space: normal;
 	z-index: 100;
-	padding: 7px;
-	/*display: none;*/
+	padding: 10px 10px 0 10px;
 	visibility: hidden;
-	-moz-box-shadow: 	2px 2px 8px #ddd;
-	-webkit-box-shadow: 2px 2px 8px #ddd;
-	box-shadow:         2px 2px 8px #ddd;
-	border: 1px solid #bbb;
+	/*
+	jetpack style:
+	-moz-box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+	-webkit-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);*/
+	/* admin bar style */
+	-moz-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
+	-webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
+	box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
+	border: 1px solid #DFDFDF;
 	opacity: 0;
+}
+
+.cms_tpv_page_actions:before {
+	color: white;
+	position: absolute;
+	left: -16px;
+	top: 32px;
+	content: '\25C0'; /* left arrow */
+	display: inline-block;
+	-webkit-font-smoothing: antialiased;
+	font: normal 16px/1 'Noticons';
+	vertical-align: top;
+	text-shadow: 0px 1px 6px rgba(0, 0, 0, 0.2), -1px 0px 0 #DFDFDF;
+	overflow: hidden;
 }
 
 .cms_tpv_page_actions.cms_tpv_page_actions_visible {
@@ -273,20 +272,48 @@ li span.cms_tpv_action_add_page {
 	opacity: 1;
 }
 
+
+/*
+div.cms_tpv_container.has-visible-actions li {
+	opacity: .5
+}
+
+div.cms_tpv_container.has-visible-actions li.has-visible-actions {
+	opacity: 1;
+}
+*/
+li.has-visible-actions > div.cmstpv-hoverIntent-wrap:first-of-type > a:first-of-type {
+	/*font-weight: bold;*/
+	background-color: lightyellow;
+}
+
 .cms_tpv_page_actions p {
-	margin: 0 0 .5em 0;
+	margin: .5em 0 .5em 0;
+	line-height: 1.2;
+}
+p.cms_tpv_action_add_and_edit_page,
+p.cms_tpv_action_edit_and_view
+ {
+	margin-top: 0em;
 }
 .cms_tpv_wrapper .cms_tpv_page_actions a {
 	display: inline;
 	background: transparent;
 	text-decoration: underline;
-	padding: 0;
 	color: #21759B;
+	font-weight: normal;
+	padding: 0 .5em 0 0;
+	margin-right: .2em;
+	border-right: 1px solid #aaa;
+}
+.cms_tpv_wrapper .cms_tpv_page_actions a:last-child {
+	border: none;
 }
 
 .cms_tpv_wrapper .cms_tpv_page_actions a:hover
  {
 	color: #d54e21;
+	background-color: transparent;
 }
 
 .cms_tpv_page_actions ul {
@@ -305,24 +332,30 @@ li span.cms_tpv_action_add_page {
 }
 .cms_tpv_page_actions dl {
 	margin-top: 1em;
+	margin-bottom: 1em;
 	color: #333;
 	font-size: 11px;
+	line-height: 1.2;
 }
 .cms_tpv_page_actions dl dd {
 	margin: 0;
 }
 .cms_tpv_page_actions dl dt {
 	color: #999;
+	margin: .5em 0 0 0;
 }
 
 .cms_tpv_page_actions_arrow {
+	display: none;
+	/*
 	width: 8px;
 	height: 15px;
 	background: url(images/arrow-left.gif) no-repeat top left;
 	position: absolute;
 	display: block;
-	top: 7px;
 	left: -8px;
+	left: 0px;
+	*/
 }
 
 .cms_tpv_page_actions_columns table td {
@@ -343,6 +376,11 @@ li.cms_tpv_user_can_edit_page_no a {
 	opacity: .6; /* Standard: FF gt 1.5, Opera, Safari */
 	-ms-filter: "alpha(opacity=60)"; /* IE 8 */
 }
+
+h4.cms_tpv_page_actions_headline {
+	margin: 0 0 0 0;
+}
+
 
 .bonny-plugins-inner-sidebar {
 	float: right;
