--- a/styles/styles.css
+++ b/styles/styles.css
@@ -462,3 +462,14 @@ ul.cms_tpv_action_add_doit_pages {
 .cms_tpv_action_add_doit_pages li:last-child span:first-child {
 	visibility: hidden;
 }
+
+/*
+
+*/
+#view-switch-tree {
+	background: url(images/switch-view-icons.png) 0 0;
+
+}
+.current #view-switch-tree {
+	background-position: -20px 0;
+}
