can view tree in post overview now. it's funky
git-svn-id: https://plugins.svn.wordpress.org/cms-tree-page-view/trunk@641987 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -464,12 +464,16 @@ ul.cms_tpv_action_add_doit_pages {
 }
 
 /*
-
+for posts overview enabled mode
 */
 #view-switch-tree {
 	background: url(images/switch-view-icons.png) 0 0;
-
+	visibility: hidden;
 }
 .current #view-switch-tree {
 	background-position: -20px 0;
 }
+.view-switch #view-switch-tree {
+	visibility: visible;
+}
+
