show message ey
git-svn-id: https://plugins.svn.wordpress.org/cms-tree-page-view/trunk@644827 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,6 +39,11 @@
 .cms-tpv-subsubsub {
 	margin-top: 8px;
 	color: #666;
+	margin-bottom: 0;
+}
+
+.cms_tvp_switch_langs + .cms-tpv-subsubsub {
+	margin-top: 0;
 }
 
 .cms-tpv-subsubsub li {
