--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,8 +5,7 @@
 }
 */
 
-@import url("http://s0.wordpress.com/i/noticons/noticons.css");
-
+@import url("https://secure.wordpress.com/i/noticons/noticons.css");
 
 .cms_tpv_wrapper {
 	z-index: 10;
@@ -39,6 +38,11 @@
 .cms-tpv-subsubsub {
 	margin-top: 8px;
 	color: #666;
+	margin-bottom: 0;
+}
+
+.cms_tvp_switch_langs + .cms-tpv-subsubsub {
+	margin-top: 0;
 }
 
 .cms-tpv-subsubsub li {
@@ -48,6 +52,7 @@
 
 .cms-tpv-subsubsub li:first-child {
 	margin-left: 0;
+	margin-right: 1px;
 }
 
 .cms-tpv-subsubsub li a {
@@ -113,6 +118,7 @@
 
 
 .tree-default span.post_type {
+	background-color: rgb(248, 98, 16);
 	background-color: rgba(248, 98, 16, .75);
 	-moz-border-radius: 2px;
 	-webkit-border-radius: 2px;
@@ -129,11 +135,13 @@
 }
 .tree-default span.post_type_password,
 .tree-default span.post_type_private {
+	background-color: rgb(37, 182, 26);
 	background-color: rgba(37, 182, 26, .75);
 }
 .tree-default span.post_type_pending,
 .tree-default span.post_type_future
 {
+	background-color: rgb(0, 105, 224);
 	background-color: rgba(0, 105, 224, .75);
 }
 
@@ -292,23 +300,39 @@ p.cms_tpv_action_edit_and_view
 	margin-top: 0em;
 }
 .cms_tpv_wrapper .cms_tpv_page_actions a {
-	display: inline;
 	background: transparent;
 	text-decoration: underline;
 	color: #21759B;
 	font-weight: normal;
 	padding: 0 .5em 0 0;
 	margin-right: .2em;
-	border-right: 1px solid #aaa;
-}
-.cms_tpv_wrapper .cms_tpv_page_actions a:last-child {
-	border: none;
 }
 
-.cms_tpv_wrapper .cms_tpv_page_actions a:hover
- {
+.cms_tpv_wrapper .cms_tpv_page_actions .cms_tpv_action_edit_and_view a {
+	border-right: 1px solid #aaa;
+}
+
+.cms_tpv_wrapper .cms_tpv_page_actions .cms_tpv_action_edit_and_view a:not(.hidden):last-of-type {
+	border-right: none;
+}
+
+.cms_tpv_wrapper .cms_tpv_page_actions a:hover {
 	color: #d54e21;
 	background-color: transparent;
+}
+
+/* applied to all (aka "first") */
+.cms_tpv_wrapper .cms_tpv_page_actions .cms_tpv_action_add_and_edit_page a:not(.hidden) {
+	/*background: red;*/
+	padding: 0;
+	margin: 0;
+}
+/* tricky way to get non first not hidden */
+.cms_tpv_wrapper .cms_tpv_page_actions .cms_tpv_action_add_and_edit_page a:not(.hidden) ~ a:not(.hidden) {
+	/*background: yellow;*/
+	border-left: 1px solid #aaa;
+	padding-left: .5em;
+	margin-left: .2em;
 }
 
 .cms_tpv_page_actions ul {
@@ -454,6 +478,10 @@ for posts overview enabled mode
 
 .view-switch.view-switch-cstpv-icon-added {
 	padding-right: 0;
+}
+
+.view-switch-cstpv-icon-added a {
+	display: inline-block !important;
 }
 
 #view-switch-tree {
